# 42-n_puzzle-rust

./: Cargo.toml  README.md
npuzzle_lib/: Cargo.toml  todo
npuzzle_lib/src/: checker.rs  generator.rs  heuristics.rs  input_parser.rs  lib.rs  node.rs  solver.rs  types.rs  util.rs
scripts/: format.sh
src/: main.rs
test_puzzle/: correct_comment_size_3  correct_size_3  failed_duplicated_number  failed_imcomplete_puzzle  failed_size_error  hard_3x3  hard_4x4  neos_4x4  solvable_10x10  solvable_5x5
