[package]
name = "rustaquin"
version = "0.1.0"
authors = ["Pierre Bondoerffer <pierre.bondoerffer@gandi.net>"]

[dependencies]
npuzzle_lib = { path = "./npuzzle_lib" }

[profile.release]
lto = true
debug = false
panic = 'abort'
opt-level = 3
incremental = false
overflow-checks = false
debug-assertions = false
