[package]
name = "rustaquin"
version = "0.1.0"
authors = [
	"Pierre Bondoerffer <pbondoer@student.42.fr>",
	"Clément Ledant <cledant@student.42.fr>",
]
edition = "2018"

[dependencies]
npuzzle_lib = { path = "./npuzzle_lib" }

[profile.release]
lto = true
debug = false
panic = 'abort'
opt-level = 3
incremental = false
overflow-checks = false
debug-assertions = false
