[package]
name = "npuzzle_lib"
version = "0.1.0"
authors = [
	"Pierre Bondoerffer <pbondoer@student.42.fr>",
	"Clément Ledant <cledant@student.42.fr>",
]

[dependencies]
rand = "0.5.5"

[profile.release]
lto = true
debug = false
panic = 'abort'
opt-level = 3
incremental = false
overflow-checks = false
debug-assertions = false
